--- a/bookstore_app/app/views/layouts/application.html.erb
+++ b/bookstore_app/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
             <%= link_to "Home", '#' %>
             <%= link_to "About Us", '#' %>
             <%= link_to "Contact Us", '#' %>
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Add New Book',
+new_book_path %> </a>
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Show All Books',
+books_path %> </a>
           </nav>
         </div>
         <%= yield %>
