--- a/bookstore_app/app/views/layouts/application.html.erb
+++ b/bookstore_app/app/views/layouts/application.html.erb
@@ -17,13 +17,25 @@
           <h5 class="my-0 mr-md-auto font-weight-normal"> Sheffield Bookstore </h5>
 
           <nav class="my-2 my-md-0 mr-md-3">
-            <%= link_to "Home", '#' %>
-            <%= link_to "About Us", '#' %>
-            <%= link_to "Contact Us", '#' %>
+            <%= link_to "Home", static_pages_Home_path %>
             <a class="p-2 text-dark" href="#"> <%= link_to 'Add New Book',
-new_book_path %> </a>
+            new_book_path %> </a>
             <a class="p-2 text-dark" href="#"> <%= link_to 'Show All Books',
-books_path %> </a>
+            books_path %> </a>
+
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Novel',
+            new_novel_path %> </a>
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Show All Books',
+            novel_index_path %> </a>
+
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Author',
+            new_author_path %> </a>
+
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Genre',
+            new_genre_path %> </a>
+
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Publisher',
+            new_publisher_path %> </a>
           </nav>
         </div>
         <%= yield %>
