Sign up and Login/out sessions Complete

--- a/bookstore_app/app/assets/stylesheets/application.scss
+++ b/bookstore_app/app/assets/stylesheets/application.scss
@@ -12,3 +12,17 @@
  *
  */
 @import "bootstrap";
+
+.search-box{
+	width:85%;
+	float:left;
+	margin-right:10px;
+}
+
+.add-text-btn{
+	padding-left: 0;
+}
+
+.search-btn{
+	float: right;
+}
