--- a/bookstore_app/app/views/layouts/application.html.erb
+++ b/bookstore_app/app/views/layouts/application.html.erb
@@ -12,38 +12,68 @@
   <body>
     <div class="container">
 
-       <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
-          <h5 class="my-0 mr-md-auto font-weight-normal"> Sheffield Bookstore </h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"> Sheffield Bookstore </h5>
 
-          <nav class="my-2 my-md-0 mr-md-3">
-            <%= link_to "Home", static_pages_Home_path %>
+        <nav class="my-2 my-md-0 mr-md-3">
+          
+          <%= link_to "Home", static_pages_Home_path %>
+
+          <!--
             <a class="p-2 text-dark" href="#"> <%= link_to 'Add New Book',
             new_book_path %> </a>
             <a class="p-2 text-dark" href="#"> <%= link_to 'Show All Books',
             books_path %> </a>
+          -->
 
-            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Novel',
-            novels_new_path %> </a>
-            <a class="p-2 text-dark" href="#"> <%= link_to 'Show All Novels',
-            novels_index_path %> </a>
+          <!--<a class="p-2 text-dark" href="#"> <%= link_to 'Add Novel',
+          novels_new_path %> </a>
+          -->
 
-            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Author',
-            new_author_path %> </a>
+          <a class="p-2 text-dark" href="#"> <%= link_to 'Novels',
+          novels_index_path %> </a>
 
-            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Genre',
-            new_genre_path %> </a>
+          <a class="p-2 text-dark" href="#"> <%= link_to 'Add Author', new_author_path %> </a>
 
-            <a class="p-2 text-dark" href="#"> <%= link_to 'Add Publisher',
-            new_publisher_path %> </a>
+          <a class="p-2 text-dark" href="#"> <%= link_to 'Add Genre', new_genre_path %> </a>
 
-            <!--
-              <a class="p-2 text-dark" href="#"> <%= link_to 'Link to Search Page??',
-              search_novels_path %> </a> 
-            -->
-          </nav>
+          <a class="p-2 text-dark" href="#"> <%= link_to 'Add Publisher', new_publisher_path %> </a>
+          
+          <% if current_user %>
+            <a class="p-2 text-dark" href="#">
+              <%= link_to 'Log out', session_path('active'), method: :delete %>
+            </a>
+
+            <a class="p-2 text-dark" href="#">
+              <%= current_user.userid %>
+            </a>
+
+          <% else %>
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Register', new_user_path %> </a>
+
+            <a class="p-2 text-dark" href="#">
+              <%= link_to 'Log in', new_session_path, class: "active_nav_link" %>
+            </a>
+          <% end %>
+
+          <!--
+            <a class="p-2 text-dark" href="#"> <%= link_to 'Link to Search Page??',
+            search_novels_path %> </a> 
+          -->
+        </nav>
+      </div>
+
+        <div id="message-container">
+          <% if alert %>
+            <%= alert %>
+          <% end %>
+
+          <% if notice %>
+            <%= notice %>
+          <% end %>
         </div>
-        <%= yield %>
     </div>
+    <%= yield %>
   </body>
 </html>
