--- a/bookstore_app/app/views/static_pages/Home.html.erb
+++ b/bookstore_app/app/views/static_pages/Home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1 class="jumbotron-heading">Album Example</h1>
+	<h1 class="jumbotron-heading" style="padding-left:15px">Album Example</h1>
 	<div class="container">
 		<div class="row">
 			<div class="col">
